Source/System.CommandLine.Parser/Antlr/CommandLineParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.3.1-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from CommandLine.g4 by ANTLR 4.5.3.1-SNAPSHOT

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace System.CommandLine.Parser.Antlr
{
    using Antlr4.Runtime;
    using Antlr4.Runtime.Atn;
    using Antlr4.Runtime.Misc;
    using Antlr4.Runtime.Tree;

    [System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.3.1-SNAPSHOT")]
[System.CLSCompliant(false)]
internal partial class CommandLineParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, UnixStyleFlaggedIdentifiers=4, WindowsStyleIdentifier=5, 
		UnixStyleIdentifier=6, AssignmentOperator=7, True=8, False=9, Number=10, 
		Digit=11, String=12, QuotedString=13, WhiteSpaces=14;
	public const int
		RULE_commandLine = 0, RULE_defaultParameter = 1, RULE_parameter = 2, RULE_value = 3;
	public static readonly string[] ruleNames = {
		"commandLine", "defaultParameter", "parameter", "value"
	};

	private static readonly string[] _LiteralNames = {
		null, "'['", "','", "']'", null, null, null, null, "'true'", "'false'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, "UnixStyleFlaggedIdentifiers", "WindowsStyleIdentifier", 
		"UnixStyleIdentifier", "AssignmentOperator", "True", "False", "Number", 
		"Digit", "String", "QuotedString", "WhiteSpaces"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CommandLine.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public CommandLineParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CommandLineContext : ParserRuleContext {
		public DefaultParameterContext[] defaultParameter() {
			return GetRuleContexts<DefaultParameterContext>();
		}
		public DefaultParameterContext defaultParameter(int i) {
			return GetRuleContext<DefaultParameterContext>(i);
		}
		public ParameterContext[] parameter() {
			return GetRuleContexts<ParameterContext>();
		}
		public ParameterContext parameter(int i) {
			return GetRuleContext<ParameterContext>(i);
		}
		public CommandLineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commandLine; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandLineVisitor<TResult> typedVisitor = visitor as ICommandLineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommandLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandLineContext commandLine() {
		CommandLineContext _localctx = new CommandLineContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_commandLine);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 11;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==String || _la==QuotedString) {
				{
				{
				State = 8; defaultParameter();
				}
				}
				State = 13;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 17;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UnixStyleFlaggedIdentifiers) | (1L << WindowsStyleIdentifier) | (1L << UnixStyleIdentifier))) != 0)) {
				{
				{
				State = 14; parameter();
				}
				}
				State = 19;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefaultParameterContext : ParserRuleContext {
		public DefaultParameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_defaultParameter; } }
	 
		public DefaultParameterContext() { }
		public virtual void CopyFrom(DefaultParameterContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DefaultParameterStringContext : DefaultParameterContext {
		public ITerminalNode String() { return GetToken(CommandLineParser.String, 0); }
		public ITerminalNode QuotedString() { return GetToken(CommandLineParser.QuotedString, 0); }
		public DefaultParameterStringContext(DefaultParameterContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandLineVisitor<TResult> typedVisitor = visitor as ICommandLineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefaultParameterString(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefaultParameterContext defaultParameter() {
		DefaultParameterContext _localctx = new DefaultParameterContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_defaultParameter);
		try {
			State = 22;
			switch (_input.La(1)) {
			case String:
				_localctx = new DefaultParameterStringContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 20; Match(String);
				}
				break;
			case QuotedString:
				_localctx = new DefaultParameterStringContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 21; Match(QuotedString);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParameterContext : ParserRuleContext {
		public ParameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameter; } }
	 
		public ParameterContext() { }
		public virtual void CopyFrom(ParameterContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class WindowsStyleParameterContext : ParameterContext {
		public ITerminalNode WindowsStyleIdentifier() { return GetToken(CommandLineParser.WindowsStyleIdentifier, 0); }
		public ITerminalNode AssignmentOperator() { return GetToken(CommandLineParser.AssignmentOperator, 0); }
		public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public WindowsStyleParameterContext(ParameterContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandLineVisitor<TResult> typedVisitor = visitor as ICommandLineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWindowsStyleParameter(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UnixStyleFlaggedSwitchContext : ParameterContext {
		public ITerminalNode UnixStyleFlaggedIdentifiers() { return GetToken(CommandLineParser.UnixStyleFlaggedIdentifiers, 0); }
		public UnixStyleFlaggedSwitchContext(ParameterContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandLineVisitor<TResult> typedVisitor = visitor as ICommandLineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnixStyleFlaggedSwitch(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UnixStyleSwitchContext : ParameterContext {
		public ITerminalNode UnixStyleIdentifier() { return GetToken(CommandLineParser.UnixStyleIdentifier, 0); }
		public UnixStyleSwitchContext(ParameterContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandLineVisitor<TResult> typedVisitor = visitor as ICommandLineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnixStyleSwitch(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UnixStyleAliasParameterContext : ParameterContext {
		public ITerminalNode UnixStyleFlaggedIdentifiers() { return GetToken(CommandLineParser.UnixStyleFlaggedIdentifiers, 0); }
		public ITerminalNode AssignmentOperator() { return GetToken(CommandLineParser.AssignmentOperator, 0); }
		public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public UnixStyleAliasParameterContext(ParameterContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandLineVisitor<TResult> typedVisitor = visitor as ICommandLineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnixStyleAliasParameter(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WindowsStyleSwitchContext : ParameterContext {
		public ITerminalNode WindowsStyleIdentifier() { return GetToken(CommandLineParser.WindowsStyleIdentifier, 0); }
		public WindowsStyleSwitchContext(ParameterContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandLineVisitor<TResult> typedVisitor = visitor as ICommandLineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWindowsStyleSwitch(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UnixStyleParameterContext : ParameterContext {
		public ITerminalNode UnixStyleIdentifier() { return GetToken(CommandLineParser.UnixStyleIdentifier, 0); }
		public ITerminalNode AssignmentOperator() { return GetToken(CommandLineParser.AssignmentOperator, 0); }
		public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public UnixStyleParameterContext(ParameterContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandLineVisitor<TResult> typedVisitor = visitor as ICommandLineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnixStyleParameter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParameterContext parameter() {
		ParameterContext _localctx = new ParameterContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_parameter);
		try {
			State = 42;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new WindowsStyleSwitchContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 24; Match(WindowsStyleIdentifier);
				}
				break;

			case 2:
				_localctx = new WindowsStyleParameterContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 25; Match(WindowsStyleIdentifier);
				State = 26; Match(AssignmentOperator);
				State = 27; value();
				}
				break;

			case 3:
				_localctx = new WindowsStyleParameterContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 28; Match(WindowsStyleIdentifier);
				State = 29; value();
				}
				break;

			case 4:
				_localctx = new UnixStyleParameterContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 30; Match(UnixStyleIdentifier);
				State = 31; Match(AssignmentOperator);
				State = 32; value();
				}
				break;

			case 5:
				_localctx = new UnixStyleParameterContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 33; Match(UnixStyleIdentifier);
				State = 34; value();
				}
				break;

			case 6:
				_localctx = new UnixStyleSwitchContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 35; Match(UnixStyleIdentifier);
				}
				break;

			case 7:
				_localctx = new UnixStyleAliasParameterContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 36; Match(UnixStyleFlaggedIdentifiers);
				State = 37; Match(AssignmentOperator);
				State = 38; value();
				}
				break;

			case 8:
				_localctx = new UnixStyleAliasParameterContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 39; Match(UnixStyleFlaggedIdentifiers);
				State = 40; value();
				}
				break;

			case 9:
				_localctx = new UnixStyleFlaggedSwitchContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 41; Match(UnixStyleFlaggedIdentifiers);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueContext : ParserRuleContext {
		public ValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value; } }
	 
		public ValueContext() { }
		public virtual void CopyFrom(ValueContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ArrayContext : ValueContext {
		public ValueContext[] value() {
			return GetRuleContexts<ValueContext>();
		}
		public ValueContext value(int i) {
			return GetRuleContext<ValueContext>(i);
		}
		public ArrayContext(ValueContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandLineVisitor<TResult> typedVisitor = visitor as ICommandLineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArray(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NumberContext : ValueContext {
		public ITerminalNode Number() { return GetToken(CommandLineParser.Number, 0); }
		public NumberContext(ValueContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandLineVisitor<TResult> typedVisitor = visitor as ICommandLineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StringContext : ValueContext {
		public ITerminalNode String() { return GetToken(CommandLineParser.String, 0); }
		public ITerminalNode QuotedString() { return GetToken(CommandLineParser.QuotedString, 0); }
		public StringContext(ValueContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandLineVisitor<TResult> typedVisitor = visitor as ICommandLineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitString(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BooleanContext : ValueContext {
		public ITerminalNode True() { return GetToken(CommandLineParser.True, 0); }
		public ITerminalNode False() { return GetToken(CommandLineParser.False, 0); }
		public BooleanContext(ValueContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandLineVisitor<TResult> typedVisitor = visitor as ICommandLineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBoolean(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValueContext value() {
		ValueContext _localctx = new ValueContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_value);
		int _la;
		try {
			State = 61;
			switch (_input.La(1)) {
			case String:
				_localctx = new StringContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 44; Match(String);
				}
				break;
			case QuotedString:
				_localctx = new StringContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 45; Match(QuotedString);
				}
				break;
			case Number:
				_localctx = new NumberContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 46; Match(Number);
				}
				break;
			case T__0:
				_localctx = new ArrayContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 47; Match(T__0);
				State = 56;
				_la = _input.La(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << True) | (1L << False) | (1L << Number) | (1L << String) | (1L << QuotedString))) != 0)) {
					{
					State = 48; value();
					State = 53;
					_errHandler.Sync(this);
					_la = _input.La(1);
					while (_la==T__1) {
						{
						{
						State = 49; Match(T__1);
						State = 50; value();
						}
						}
						State = 55;
						_errHandler.Sync(this);
						_la = _input.La(1);
					}
					}
				}

				State = 58; Match(T__2);
				}
				break;
			case True:
				_localctx = new BooleanContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 59; Match(True);
				}
				break;
			case False:
				_localctx = new BooleanContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 60; Match(False);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN.ToCharArray());
}
} // namespace System.CommandLine.Parser.Antlr
